@@ -1,29 +1,29 @@
 package org.utbot.intellij.plugin.process
 
 import com.intellij.ide.plugins.cl.PluginClassLoader
-import com.intellij.openapi.application.ApplicationManager
+import com.intellij.openapi.project.DumbService
+import com.intellij.openapi.project.Project
 import com.intellij.psi.PsiMethod
 import com.intellij.refactoring.util.classMembers.MemberInfo
 import com.jetbrains.rd.util.lifetime.Lifetime
-import com.jetbrains.rd.util.lifetime.onTermination
 import com.jetbrains.rd.util.lifetime.throwIfNotAlive
 import kotlinx.coroutines.runBlocking
 import kotlinx.coroutines.sync.Mutex
 import kotlinx.coroutines.sync.withLock
 import mu.KotlinLogging
-import org.jetbrains.kotlin.scripting.resolve.classId
 import org.utbot.common.AbstractSettings
 import org.utbot.common.getPid
+import org.utbot.common.osSpecificJavaExecutable
 import org.utbot.common.utBotTempDirectory
 import org.utbot.framework.UtSettings
 import org.utbot.framework.codegen.*
 import org.utbot.framework.codegen.model.UtilClassKind
-import org.utbot.framework.codegen.model.constructor.tree.TestsGenerationReport
 import org.utbot.framework.plugin.api.*
 import org.utbot.framework.plugin.services.JdkInfo
 import org.utbot.framework.plugin.services.JdkInfoDefaultProvider
 import org.utbot.framework.plugin.services.JdkInfoService
 import org.utbot.framework.plugin.services.WorkingDirService
+import org.utbot.framework.process.OpenModulesContainer
 import org.utbot.framework.process.generated.*
 import org.utbot.framework.process.generated.Signature
 import org.utbot.framework.util.Conflict
@@ -39,85 +39,77 @@ import org.utbot.rd.startUtProcessWithRdServer
 import org.utbot.sarif.SourceFindingStrategy
 import java.io.File
 import java.nio.file.Path
-import java.util.*
+import kotlin.io.path.deleteIfExists
 import kotlin.io.path.pathString
 import kotlin.random.Random
 import kotlin.reflect.KProperty1
 import kotlin.reflect.full.memberProperties
 
+private val engineProcessLogConfigurations = utBotTempDirectory.toFile().resolve("rdEngineProcessLogConfigurations")
 private val logger = KotlinLogging.logger {}
 private val engineProcessLogDirectory = utBotTempDirectory.toFile().resolve("rdEngineProcessLogs")
 
-data class RdGTestenerationResult(val notEmptyCases: Int, val testSetsId: Long)
+data class RdTestGenerationResult(val notEmptyCases: Int, val testSetsId: Long)
 
-class EngineProcess(val lifetime: Lifetime) {
+class EngineProcess(parent: Lifetime, val project: Project) {
+    private val ldef = parent.createNested()
     private val id = Random.nextLong()
     private var count = 0
+    private var configPath: Path? = null
 
-    companion object {
-        private var configPath: Path? = null
-        private fun getOrCreateLogConfig(): String {
-            var realPath = configPath
-            if (realPath == null) {
-                synchronized(this) {
-                    realPath = configPath
-                    if (realPath == null) {
-                        utBotTempDirectory.toFile().mkdirs()
-                        configPath = utBotTempDirectory.toFile().resolve("EngineProcess_log4j2.xml").apply {
-                            writeText(
-                                """<?xml version="1.0" encoding="UTF-8"?>
+    private fun getOrCreateLogConfig(): String {
+        var realPath = configPath
+        if (realPath == null) {
+            engineProcessLogConfigurations.mkdirs()
+            configPath = File.createTempFile("epl", ".xml", engineProcessLogConfigurations).apply {
+                val onMatch = if (UtSettings.logConcreteExecutionErrors) "NEUTRAL" else "DENY"
+                writeText(
+                    """<?xml version="1.0" encoding="UTF-8"?>
 <Configuration>
     <Appenders>
         <Console name="Console" target="SYSTEM_OUT">
-            <ThresholdFilter level="ERROR"  onMatch="DENY"   onMismatch="DENY"/>
+            <ThresholdFilter level="${UtSettings.engineProcessLogLevel.name.uppercase()}"  onMatch="$onMatch"   onMismatch="DENY"/>
             <PatternLayout pattern="%d{HH:mm:ss.SSS} | %-5level | %c{1} | %msg%n"/>
         </Console>
     </Appenders>
     <Loggers>
-        <Root level="error">
+        <Root level="${UtSettings.engineProcessLogLevel.name.lowercase()}">
             <AppenderRef ref="Console"/>
         </Root>
     </Loggers>
 </Configuration>"""
-                            )
-                        }.toPath()
-                        realPath = configPath
-                    }
-                }
-            }
-            return realPath!!.pathString
+                )
+            }.toPath()
+            realPath = configPath
         }
+        return realPath!!.pathString
     }
-    // because we cannot load idea bundled lifetime or it will break everything
 
     private fun debugArgument(): String {
         return "-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,quiet=y,address=5005".takeIf { Settings.runIdeaProcessWithDebug }
             ?: ""
     }
 
-    private val kryoHelper = KryoHelper(lifetime)
+    private val kryoHelper = KryoHelper(ldef)
 
     private suspend fun engineModel(): EngineProcessModel {
-        lifetime.throwIfNotAlive()
+        ldef.throwIfNotAlive()
         return lock.withLock {
             var proc = current
 
             if (proc == null) {
-                proc = startUtProcessWithRdServer(lifetime) { port ->
+                proc = startUtProcessWithRdServer(ldef) { port ->
                     val current = JdkInfoDefaultProvider().info
                     val required = JdkInfoService.jdkInfoProvider.info
                     val java =
-                        JdkInfoService.jdkInfoProvider.info.path.resolve("bin${File.separatorChar}javaw").toString()
+                        JdkInfoService.jdkInfoProvider.info.path.resolve("bin${File.separatorChar}${osSpecificJavaExecutable()}").toString()
                     val cp = (this.javaClass.classLoader as PluginClassLoader).classPath.baseUrls.joinToString(
                         separator = ";",
                         prefix = "\"",
                         postfix = "\""
                     )
                     val classname = "org.utbot.framework.process.EngineMainKt"
-                    val javaVersionSpecificArguments =
-                        listOf("--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED", "--illegal-access=warn")
-                            .takeIf { JdkInfoService.provide().version > 8 }
-                            ?: emptyList()
+                    val javaVersionSpecificArguments = OpenModulesContainer.javaVersionSpecificArguments
                     val directory = WorkingDirService.provide().toFile()
                     val log4j2ConfigFile = "\"-Dlog4j2.configurationFile=${getOrCreateLogConfig()}\""
                     val debugArg = debugArgument()
@@ -172,7 +164,7 @@ class EngineProcess(val lifetime: Lifetime) {
     private var current: ProcessWithRdServer? = null
 
     fun setupUtContext(classpathForUrlsClassloader: List<String>) = runBlocking {
-        engineModel().setupUtContext.startSuspending(lifetime, SetupContextParams(classpathForUrlsClassloader))
+        engineModel().setupUtContext.startSuspending(ldef, SetupContextParams(classpathForUrlsClassloader))
     }
 
     // suppose that only 1 simultaneous test generator process can be executed in idea
@@ -186,7 +178,7 @@ class EngineProcess(val lifetime: Lifetime) {
     ) = runBlocking {
         engineModel().isCancelled.set(handler = isCancelled)
         engineModel().createTestGenerator.startSuspending(
-            lifetime,
+            ldef,
             TestGeneratorParams(buildDir.toTypedArray(), classPath, dependencyPaths, JdkInfo(jdkInfo.path.pathString, jdkInfo.version))
         )
     }
@@ -238,9 +230,9 @@ class EngineProcess(val lifetime: Lifetime) {
         isFuzzingEnabled: Boolean,
         fuzzingValue: Double,
         searchDirectory: String
-    ): RdGTestenerationResult = runBlocking {
+    ): RdTestGenerationResult = runBlocking {
         val result = engineModel().generate.startSuspending(
-            lifetime,
+            ldef,
             GenerateParams(
                 mockInstalled,
                 staticsMockingIsConfigured,
@@ -257,7 +249,7 @@ class EngineProcess(val lifetime: Lifetime) {
             )
         )
 
-        return@runBlocking RdGTestenerationResult(result.notEmptyCases, result.testSetsId)
+        return@runBlocking RdTestGenerationResult(result.notEmptyCases, result.testSetsId)
     }
 
     fun render(
@@ -278,7 +270,7 @@ class EngineProcess(val lifetime: Lifetime) {
         testClassPackageName: String
     ): Pair<String, UtilClassKind?> = runBlocking {
         val result = engineModel().render.startSuspending(
-                lifetime, RenderParams(
+            ldef, RenderParams(
                     testSetsId,
                     kryoHelper.writeObject(classUnderTest),
                     kryoHelper.writeObject(paramNames),
@@ -300,9 +292,9 @@ class EngineProcess(val lifetime: Lifetime) {
     }
 
     fun forceTermination() = runBlocking {
+        configPath?.deleteIfExists()
         engineModel().stopProcess.start(Unit)
         current?.terminate()
-        engineModel().writeSarifReport
     }
 
     fun writeSarif(reportFilePath: Path,
@@ -312,7 +304,7 @@ class EngineProcess(val lifetime: Lifetime) {
     ) = runBlocking {
         current!!.protocol.rdSourceFindingStrategy.let {
             it.getSourceFile.set { params ->
-                ApplicationManager.getApplication().runReadAction<String?> {
+                DumbService.getInstance(project).runReadActionInSmartMode<String?> {
                     sourceFindingStrategy.getSourceFile(
                         params.classFqn,
                         params.extension
@@ -320,7 +312,7 @@ class EngineProcess(val lifetime: Lifetime) {
                 }
             }
             it.getSourceRelativePath.set { params ->
-                ApplicationManager.getApplication().runReadAction<String> {
+                DumbService.getInstance(project).runReadActionInSmartMode<String> {
                     sourceFindingStrategy.getSourceRelativePath(
                         params.classFqn,
                         params.extension
@@ -328,7 +320,7 @@ class EngineProcess(val lifetime: Lifetime) {
                 }
             }
             it.testsRelativePath.set { _ ->
-                ApplicationManager.getApplication().runReadAction<String> {
+                DumbService.getInstance(project).runReadActionInSmartMode<String> {
                     sourceFindingStrategy.testsRelativePath
                 }
             }
@@ -374,8 +366,8 @@ class EngineProcess(val lifetime: Lifetime) {
     }
 
     init {
-        lifetime.onTermination {
-            current?.terminate()
+        ldef.onTermination {
+            forceTermination()
         }
     }
 }
